# ImpliedVolatilityRandomization

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_randomized_flat.py  run_randomized_sabr.py  run_randomized_sabr_with_calibration.py
.github/workflows/: build-thesis.yml
Data/: August.csv  November.csv  October.csv  September.csv
Data/WTI/: WTI_20251117.csv  WTI_20251216.csv  WTI_20260114.csv  WTI_20260217.csv
general/: collocation.py  expansions.py  hagan.py  util.py
randomizations/: distributions.py  models.py  rand_flat.py  rand_sabr.py  randomized_model.py  sabr.py
scripts/: run_WTI_calibration.py  run_calibration.py  run_calibration_randomized_sabr.py  run_precalibrated_vs_calibrated_RandSABR.py  run_randomized_flat.py  run_randomized_sabr.py  run_wti_data_summary.py
src/VolatilityRandomization/: __init__.py  config.py
src/VolatilityRandomization/core/: randomized_model.py
src/VolatilityRandomization/distributions/: Beta.py  Gamma.py  LogNormal.py  Normal.py  Uniform.py  __init__.py  distribution.py
src/VolatilityRandomization/general/: expansions.py  hagan.py  util.py
src/VolatilityRandomization/models/: Flat.py  SABR.py  __init__.py  model.py
thesis/: Makefile  bibliography.bib  main.tex
thesis/config/: new_commands.tex  required_packages.tex  title_page.tex
thesis/content/: conclusion.tex  introduction.tex
thesis/content/chapters/: 1-literature-review.tex  2-randomization-framework.tex  modularization.tex
thesis/meta/: abstract_it.tex  acknowledgements.tex  info.tex
